Fix: fix gap in navbar details

--- a/styles/SCSS/_header.scss
+++ b/styles/SCSS/_header.scss
@@ -411,7 +411,7 @@ header{
             content{
                 position: absolute;
                 padding: 2.876rem 0 2.5rem 2.188rem;
-                margin-top: .5rem;
+                margin-top: 1rem;
                 margin-left: -2.188rem;
                 border-radius: 5px;
                 background-color: rgba(255, 255, 255, 0.95);
